# knomi

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  Makefile  README.md  compose.yml  pyproject.toml  sonar-project.properties
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml  release.yml  sonar.yml
docs/: ARCHITECTURE.md  COMMITING_CONVENTION.md  TESTING.md  WORKFLOWS.md  troubleshooting.md
docs/adr/: ADR-001-vector-store.md  ADR-002-token-chunking.md  ADR-003-sha256-dedup.md
knomi/: __init__.py  __main__.py  cli.py  config.py
knomi/ingest/: __init__.py  chunker.py  embedder.py  parser.py  pipeline.py  scanner.py
knomi/serve/: server.py
knomi/store/: base.py  qdrant.py
tests/: conftest.py
tests/integration/: test_pipeline.py
tests/unit/: test_chunker.py  test_cli.py  test_config.py  test_embedder.py  test_parser.py  test_pipeline.py  test_scanner.py  test_server.py
