[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "knomi"
version = "0.1.0"
description = "Token-efficient document ingestion and RAG connector"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
dependencies = [
    # CLI
    "typer>=0.12",
    # Settings
    "pydantic-settings>=2.0",
    # PDF parsing
    "pymupdf>=1.24",
    # Tokenisation
    "tiktoken>=0.7",
    # Embeddings (local)
    "sentence-transformers>=3.0",
    # Vector store
    "qdrant-client>=1.9",
    # Progress display
    "rich>=13.0",
    # OpenAI embeddings
    "openai>=1.0",
]

[project.urls]
Homepage = "https://github.com/franjofranjic27/knomi"
Repository = "https://github.com/franjofranjic27/knomi"
Issues = "https://github.com/franjofranjic27/knomi/issues"

[project.scripts]
knomi = "knomi.cli:app"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "mypy>=1.10",
    "ruff>=0.4",
    "pre-commit>=3.7",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["B008"]  # typer.Argument/Option in defaults is intentional

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["knomi"]
omit = ["knomi/__main__.py"]

[tool.coverage.report]
skip_empty = true
